# DREAMPlaceTT-Framework

./: .gitignore  ARCHITECTURE.md  LICENSE  README.md  REPRODUCE.md
benchmarks/: README.md
benchmarks/configs/: adaptec1_2048.json  adaptec1_512.json  sweep_adaptec1_2048.json  sweep_adaptec1_512.json  sweep_bigblue3_2048.json  sweep_bigblue3_512.json
docs/: BENCHMARKS.md  BLACKHOLE_HW_SPEC.md  CONSTRAINTS.md  DENSITY_PLANNING_APPROACHES.md  DREAMPLACE_IN_DOCKER.md  DREAMPLACE_TT_ARCHITECTURE.md  DREAMPLACE_TT_INTEGRATION.md  IMPLEMENTATION_LOG.md  KNOWN_ISSUES.md  PERFORMANCE_MODEL.md  PROFILING.md  RUNTIME_BREAKDOWN.md  SCATTER_DCT.md  V11_PHASE2_STATUS.md  V11_PHASE3_HANDOFF.md  V11_PHASE3_STATUS.md  V11_V13_GATHER_HANDOFF.md
host/: CMakeLists.txt  README.md  density_scatter_ttnn_server_host.cpp  v11_tile_ownership.h
integration/: README.md  process_tt_profile.py  run_dreamplace.py  scatter_ttnn_client.py  scatter_ttnn_worker.py
kernels/: README.md  v11_accum_dm.cpp  v11_accum_n_dm.cpp  v11_histogram.cpp  v11_reduce_a_dm.cpp  v11_reduce_bc_dm.cpp  v11_scatter_b_dm.cpp  v11_scatter_dm.cpp  v4_compute.cpp  v4_reader.cpp
results/: README.md
results/sweep_a1_bb3_report/: README.md  summary.csv
results/tracy_smoke_2026-05-12/: profile_v11.txt
results/tracy_sweep_adaptec1_2048_2026-05-12/: profile_v11.txt
scripts/: README.md  build_server.sh  reset_chip.sh  run_smoke.sh  run_sweep.sh
tools/: README.md  cpu_vs_tt_density.py  profile_v11.py  v11_phase1_smoke.py  v11_phase2_smoke.py  v13_offset_ratio_stats.py
tt-sfpu/: SESSION_NOTES.md  SFPU_GUIDE.md  bin_index_compute.cpp  passthrough_compute.cpp
